# Macropad-3x3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HID_Macropad_3x3.ino  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  pico_sdk_import.cmake  test_app.html
docs/: ARDUINO_IDE_SETUP.md  TROUBLESHOOTING.md  WIRING_GUIDE.md  pin_mapping.md
examples/: example_gaming.ino  example_media.ino  example_productivity.ino
include/: macros.h
src/: macros.c  main.c  tusb_config.h  usb_descriptors.c
